
package ru.zefick.tictactoe.core;

public interface Player {

    String move(Grid grid, int side);

}